--- a/assets/style.css
+++ b/assets/style.css
@@ -84,6 +84,7 @@ body {
 	font-weight: 800;
 	font-style: italic;
 	width: 60%;
+	font-size: 1rem;
 }
 #about-me p {
 	width: 80%;
@@ -102,7 +103,8 @@ body {
 }
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
 	color: #fff;
-	background-color: #BEB45A;
+	/* background-color: #BEB45A; */
+	background-color: #6f6936;
 	border-radius:0 ;
 }
 .nav-pills .nav-link {
@@ -191,6 +193,10 @@ body {
 	flex-direction: column;
 	justify-content: space-between;
 	z-index: 1;
+}
+
+.service__pricePoint{
+	font-size: calc(1.275rem + 0.3vw);
 }
 
 #contact {
