--- a/assets/style.css
+++ b/assets/style.css
@@ -72,8 +72,13 @@ html{
 
 .picture img {
 	width: 100%;
-
 }
+
+picture img{
+	width: 100vw;
+	height: auto;
+}
+
 #about-me {
 	flex: 2
 }
@@ -89,6 +94,13 @@ html{
 	width: 60%;
 	font-size: 1rem;
 }
+
+/* .about-me__image,
+.vintagecamera__img,
+.social-link{
+	width: 400px;
+	height: 400px;
+} */
 
 #about-me p {
 	width: 80%;
@@ -260,6 +272,7 @@ input[type="submit"] {
 	padding: .5em 1em
 }
 
+
 @media all and (max-width: 1180px) {
 	.picture {
 		flex : 2;
@@ -338,6 +351,9 @@ input[type="submit"] {
 @media all and (max-width: 650px) {
 	html{
 		scroll-padding-top: 10em;
+	}
+	img{
+		max-width: 650px;
 	}
 	.top-header {
 		flex-direction: column;
